rmarkdown tocado,rbind de tablas prueba

--- a/Seminario.Rmd
+++ b/Seminario.Rmd
@@ -6,30 +6,42 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## INTRODUCCIÓN:
 
 This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document.
 
-## Slide with Bullets
+### OBJETIVO GENERAL:
 
 - Bullet 1
 - Bullet 2
 - Bullet 3
 
-## Slide with R Output
+## METODOLOGIA :
 
-```{r cars, echo = TRUE}
-summary(cars)
+
+
+
+### CARGA DE PAQUETES:
+
+```{r,message=FALSE,warning=FALSE}
+#paquetes a instalar
+library(ggplot2)
+library(rjson)
+library(readxl)
+library(tidyverse)
+library(jsonlite)
+library(readr)
 ```
+
 
 ## Slide with Plot
 
-```{r pressure}
+```{r pressure,echo=TRUE}
 plot(pressure)
 ```
 
