--- a/Seminario.Rmd
+++ b/Seminario.Rmd
@@ -7,7 +7,12 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+```{r, echo=FALSE}
+htmltools::img(src = knitr::image_uri("Escudo Color TC.png"), 
+               alt = 'logo', 
+               style = 'position:absolute; top:0; left:0; padding:10px; width:100px; height:100px;')
 ```
+
 
 ## INTRODUCCIÓN:
 
