--- a/Seminario.Rmd
+++ b/Seminario.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Seminario:Calidad del Aire y Defunciones por Enfermedades Respiratorias"
-author: "Aya Toussi, Minaya Moreno Romero y Vanessa Pérez Paredes "
+author: "-name: Aya Toussi
+-name: Minaya Moreno Romero
+ -name: Vanessa Pérez Paredes "
 date: "`r Sys.Date()`"
 output: html_document
 ---
