--- a/Seminario.Rmd
+++ b/Seminario.Rmd
@@ -1,8 +1,11 @@
 ---
 title: "Seminario:Calidad del Aire y Defunciones por Enfermedades Respiratorias"
-author: "-name: Aya Toussi
--name: Minaya Moreno Romero
- -name: Vanessa Pérez Paredes "
+subtitle: " Repositorio: [GitHub](https://github.com/MinayaMR/Seminario)"
+author:
+- name: "Aya Toussi"
+- name: " Minaya Moreno Romero"
+- name: "Vanessa Pérez Paredes"
+
 date: "`r Sys.Date()`"
 output: html_document
 ---
