--- a/Seminario.Rmd
+++ b/Seminario.Rmd
@@ -42,8 +42,9 @@ Los objetivos generales de este seminario han sido:
 - Filtar la tabla principal para los datos que solo vienen por España,y luego agrupar los datos dados por Provincias para pasarlos a unas tablas representadas por Comunidades Autónomas.
 - Obtener las tablas filtradas y agrupadas por cada Comunidad Autónoma.
 - Representar los datos de cada Comunidad Autónoma a lo largo de los años (Del 2010 al 2019).
-- Se han buscado otras tablas complementarias (por falta y escasez de datos por años y por contaminantes) para incluirlas en el análisis.
+- Se han buscado otras tablas en distintos formatos(.csv, .xlsx/xls, .ods ) complementarias (por falta y escasez de datos por años y por contaminantes) para incluirlas en el análisis.
 Para ello,se han utilizado varias fuentes de datos (Datos Abiertos de España,MITECO,y algunas fuentes y herramientas autonómicas y gubernamentales) [ Datos Abiertos de España](https://datos.gob.es/es/),[MITECO](https://www.miteco.gob.es/es/calidad-y-evaluacion-ambiental/temas/atmosfera-y-calidad-del-aire/calidad-del-aire/evaluacion-datos/redes.html)
+- Se procede con lo mismo con las tablas complementarias:limpieza,,cambio de medidas,cambio de sintáxis,selección y filtrado de los datos.
 
 
 
