--- a/Seminario.Rmd
+++ b/Seminario.Rmd
@@ -66,14 +66,204 @@ library(readr)
 library(dplyr)
 library(readODS)
 library(tidyr)
+library(knitr)
 ```
 
-
-## 
+###DATOS DE DEFUNCIONES POR COMUNIDADES AUTONOMAS DESDE 2007 A 2021
+##DATOS DE DEFUNCIONES PARA CADA CCAA EN EL PERIODO DE 2007 HASTA 2021
 
 ```{r, message=FALSE,warning=FALSE}
+total_defunciones_CCAA<-
+  rbind(andalucia_rec,aragon_rec,asturias_rec,baleares_data,canarias_rec,cantabria_data,cat_rec,clm_rec,cyl_rec,euskadi_rec,extremadura_rec,gal_rec,mad_rec,mrc_rec,nvr_data,rioja_data,vlc_rec) %>% 
+  arrange(.data=.,desc(IDM))
+
+knitr::kable(total_defunciones_CCAA)
 
 ```
 
+
+##GRÁFICO DE BARRAS:EVOLUCION DE IDM POR CCAA POR EL PERIODO DE TIEMPO DADO[2007,2021]
+```{r, message=FALSE,warning=FALSE}
+IDM_CCAA_graph<-
+  ggplot(data=total_defunciones_CCAA,aes(x=factor(Year),y=IDM,fill=CCAA,width=1.5))+
+  geom_bar(stat = "identity",color="black", position = position_dodge(width = 0.7)) +
+  labs(title = "Gráfico de Barras:Evolución de IDM por CCAA por el periodo de tiempo 2007 a 2021(ambos inclusivos)",
+       x = "Años",
+       y = "Índice de Mortalidad",
+       fill = "CCAA") +
+  theme_minimal()
+
+print(IDM_CCAA_graph)
+
+```
+
+###DATOS DE CALIDAD DEL AIRE ccAA PARA LOS AÑOS 2010 A 2019
+##TABLAS NO2 PARA TODAS LAS CCAA 
+
+```{r, message=FALSE,warning=FALSE}
+total_años_no2<-
+  bind_rows(ccaa_2010_no2, ccaa_2013_no2, ccaa_2014_no2, ccaa_2015_no2, ccaa_2016_no2, ccaa_2017_no2, ccaa_2018_no2, ccaa_2019_no2)
+knitr::kable(total_años_no2)
+
+
+```
+
+
+##TABLA PM10 PARA TODAS LAS CCAA
+```{r, message=FALSE,warning=FALSE}
+total_años_pm10<-
+  bind_rows(ccaa_2010_pm10, ccaa_2011_total_pm10, ccaa_2012_total_pm10, ccaa_2013_pm10, ccaa_2014_pm10, ccaa_2015_pm10, ccaa_2016_pm10, ccaa_2017_pm10, ccaa_2018_pm10, ccaa_2019_pm10)
+
+total_años_pm10 <- total_años_pm10 %>%
+  mutate(`PM10 (μg/m3)` = replace(`PM10 (μg/m3)`, is.na(`PM10 (μg/m3)`), 0))
+
+
+knitr::kable(total_años_pm10)
+
+
+```
+
+
+
+##TABLA PM2.5 PARA TODAS LAS CCAA
+```{r, message=FALSE,warning=FALSE}
+total_años_pm2.5<-
+  bind_rows(ccaa_2010_pm2.5,ccaa_2011_total_pm2.5, ccaa_2012_total_pm2.5, ccaa_2013_pm2.5, ccaa_2014_pm2.5, ccaa_2015_pm2.5, ccaa_2016_pm2.5, ccaa_2017_pm2.5, ccaa_2018_pm2.5, ccaa_2019_pm2.5)
+
+total_años_pm2.5 <- total_años_pm2.5 %>%
+  mutate(`PM2.5 (μg/m3)` = replace(`PM2.5 (μg/m3)`, is.na(`PM2.5 (μg/m3)`), 0)) 
+
+
+
+knitr::kable(total_años_pm2.5)
+
+
+```
+
+
+###GRAFICOS CALIDAD DEL AIRE
+##GRAFICA NO2 PARA EL PERIODO 2010-2019 Y TODAS LAS CCAA
+```{r, message=FALSE,warning=FALSE}
+total_años_no2$`Measurement Year`<-as.factor(total_años_no2$`Measurement Year`)
+grafica_NO2<-
+  ggplot(data=total_años_no2, aes(x = `Measurement Year`, y =`NO2 (μg/m3)`, fill = CCAA)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Niveles de NO2 por CCAA (2010-2019)",
+       x = "Año",
+       y = "Niveles de NO2 (μg/m3)",
+       fill = "CCAA") +
+  theme_classic()
+print(grafica_NO2)
+
+
+```
+##GRAFICA PARA PM10 PARA EL PERIODO 2011-2019 TODAS LAS CCAA
+```{r, message=FALSE,warning=FALSE}
+total_años_pm10$`Measurement Year`<-as.factor(total_años_pm10$`Measurement Year`)
+grafica_pm10<-
+  ggplot(total_años_pm10, aes(x = `Measurement Year`, y = `PM10 (μg/m3)`, fill = CCAA)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Niveles de pm10 por CCAA (2010-2019)",
+       x = "Año",
+       y = "Niveles de pm10 (μg/m3)",
+       fill = "CCAA") +
+  theme_classic()
+print(grafica_pm10)
+
+
+```
+
+##GRAFICA PARA PM2.5 PARA EL PERIODO 2011-2019 TODAS LAS CCAA
+```{r, message=FALSE,warning=FALSE}
+total_años_pm2.5$`Measurement Year`<-as.factor(total_años_pm2.5$`Measurement Year`)
+options(scipen = 999)
+grafica_pm2.5<-
+  ggplot(total_años_pm2.5, aes(x = `Measurement Year`, y = `PM2.5 (μg/m3)`, fill = CCAA)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  labs(title = "Niveles de pm2.5 por CCAA (2010-2019)",
+       x = "Año",
+       y = "Niveles de pm2.5 (μg/m3)",
+       fill = "CCAA") +
+  theme_classic()
+print(grafica_pm2.5)
+
+
+```
+
+###TABLA NO2 JUNTO CON DEFUNCIONES AÑOS 2010-2019
+```{r, message=FALSE,warning=FALSE}
+no2_mortalidad_completo<-
+  bind_rows(tabla_no2_2010, tabla_no2_2013, tabla_no2_2012, tabla_no2_2014, tabla_no2_2015, tabla_no2_2016, tabla_no2_2017, tabla_no2_2018, tabla_no2_2019 ) %>% 
+  select(CCAA:`NO2 (μg/m3)`)
+no2_mortalidad_completo$Year<-as.factor(no2_mortalidad_completo$Year)
+
+no2_mortalidad_completo_final <- no2_mortalidad_completo %>%
+  mutate(`NO2 (μg/m3)` = replace(`NO2 (μg/m3)`, is.na(`NO2 (μg/m3)`), 0)) 
+
+knitr::kable(no2_mortalidad_completo)
+
+```
+
+##TABLA PM10 JUNTO CON DEFUNCIONES AÑOS 2010-2019
+```{r, message=FALSE,warning=FALSE}
+pm10_mortalidad_completo<-
+  bind_rows(tabla_pm10_2010, tabla_pm10_2012, tabla_pm10_2013, tabla_pm10_2013,  tabla_pm10_2014,  tabla_pm10_2015,  tabla_pm10_2016, tabla_pm10_2017,tabla_pm10_2018,tabla_pm10_2019) %>% 
+  select(CCAA:`PM10 (μg/m3)`)
+
+pm10_mortalidad_completo$Year<-as.factor(pm10_mortalidad_completo$Year)
+
+pm10_mortalidad_completo_final <- pm10_mortalidad_completo %>%
+  mutate(`PM10 (μg/m3)` = replace(`PM10 (μg/m3)`, is.na(`PM10 (μg/m3)`), 0)) 
+
+knitr::kable(pm10_mortalidad_completo)
+
+```
+
+##TABLA PM2.5 JUNTO DEFUNCIONES AÑOS 2010-2019
+```{r, message=FALSE,warning=FALSE}
+pm2.5_mortalidad_completo<-
+  bind_rows(tabla_pm25_2010, tabla_pm25_2012, tabla_pm25_2013, tabla_pm25_2014, tabla_pm25_2015, tabla_pm25_2016, tabla_pm25_2017, tabla_pm25_2018, tabla_pm25_2019 ) %>% 
+  select(CCAA:`PM2.5 (μg/m3)`)
+
+pm2.5_mortalidad_completo$Year<-as.factor(pm2.5_mortalidad_completo$Year)
+
+pm2.5_mortalidad_completo_final <- pm2.5_mortalidad_completo %>%
+  mutate(`PM2.5 (μg/m3)` = replace(`PM2.5 (μg/m3)`, is.na(`PM2.5 (μg/m3)`), 0)) 
+
+knitr::kable(pm2.5_mortalidad_completo)
+
+```
+
+
+###GRAFICOS UNION CALIDAD AIRRE Y DEFUNCIONES
+##GRAFICO NO2 Y DEFUNCIONES TODAS CCAA
+```{r, message=FALSE,warning=FALSE}
+grafico_combinado_no2_final <- ggplot(data=no2_mortalidad_completo_final, aes(x = CCAA, y = IDM, fill =`NO2 (μg/m3)`)) +
+  geom_bar(stat="identity") +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+print(grafico_combinado_no2_final)
+
+```
+
+
+
+##GRAFICO PM10 JUNTO DEFUNCIONES PARA TODAS LAS CCAA
+```{r, message=FALSE,warning=FALSE}
+grafico_combinado_pm10_final <- ggplot(data=pm10_mortalidad_completo_final, aes(x = CCAA, y = IDM, fill =`PM10 (μg/m3)`)) +
+  geom_bar(stat="identity") +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+print(grafico_combinado_pm10_final)
+
+```
+
+
+##GRAFICO PM2.5 JUNTO DEFUNCIONES PARA TODAS LAS CCAA
+```{r, message=FALSE,warning=FALSE}
+grafico_combinado_pm2.5 <- ggplot(data=pm2.5_mortalidad_completo_final, aes(x = CCAA, y = IDM, fill =`PM2.5 (μg/m3)`)) +
+  geom_bar(stat="identity") +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+print(grafico_combinado_pm2.5)
+
+```
 
 
